[package]
name = "quantis-server"
version = "1.0.0"
edition = "2021"
authors = ["Quantum Entropy API Contributors"]
description = "High-performance Rust server for Quantis QRNG hardware"
license = "MIT"
repository = "https://github.com/docdailey/quantum-entropy-api"

[dependencies]
# USB communication
rusb = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
criterion = "0.5"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "quantis-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "throughput"
harness = false